--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="col-md-5 mt-4">
                 <h2>Search for a city</h2>
                 <div class="input-group" id="search-city">
-                    <input type="text" class="form-input input-group-text col-9 mr-2" id="city-input" name="city"/>
+                    <input id="entered-city" type="text" class="form-input input-group-text col-9 mr-2" name="city"/>
                     <button type="button" class="btn btn-primary col-3" id="search-btn">Search</button>
                 </div>
                 <div class="card mt-4" id="search-history">
@@ -28,7 +28,7 @@
                 </div>
         </div>
 
-        <div class="col-md-7 city-forecast hide">
+        <div class="col-md-7 city-forecast minimize">
 
             <div class="card bg-color-light mt-4 mt-md-0">
                 <div class="container">
@@ -126,4 +126,6 @@
         </div>
     </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="assets/script.js"></script>
 </html>
