creating function to upload prviously searched cities and selecting them

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                                     <img class="weather-icon" id="icon-1">
                                     <span id="temp-1"></span> F
                                 </h4>
-                                <p>High: <span id="high-1"></span> F</p>
-                                <p>Low: <span id="low-1"></span> F</p>
+                                <p>Est. Max Temp: <span id="max-1"></span> F</p>
+                                <p>Est. Min Temp: <span id="min-1"></span> F</p>
                                 <p>Humidity: <span id="humidity-1"></span>%</p>
                             </div>
                         </div>
@@ -74,8 +74,8 @@
                                     <img class="weather-icon" id="icon-2">
                                     <span id="temp-2"></span> F
                                 </h4>
-                                <p>High: <span id="high-2"></span> F</p>
-                                <p>Low: <span id="low-2"></span> F</p>
+                                <p>Est. Max Temp: <span id="max-2"></span> F</p>
+                                <p>Est. Min Temp: <span id="min-2"></span> F</p>
                                 <p>Humidity: <span id="humidity-2"></span>%</p>
                             </div>
                         </div>
@@ -87,8 +87,8 @@
                                     <img class="weather-icon" id="icon-3">
                                     <span id="temp-3"></span> F
                                 </h4>
-                                <p>High: <span id="high-3"></span> F</p>
-                                <p>Low: <span id="low-3"></span> F</p>
+                                <p>Est. Max Temp: <span id="max-3"></span> F</p>
+                                <p>Est. Min Temp: <span id="min-3"></span> F</p>
                                 <p>Humidity: <span id="humidity-3"></span>%</p>
                             </div>
                         </div>
@@ -100,8 +100,8 @@
                                     <img class="weather-icon" id="icon-4">
                                     <span id="temp-4"></span> F
                                 </h4>
-                                <p>High: <span id="high-4"></span> F</p>
-                                <p>Low: <span id="low-4"></span> F</p>
+                                <p>Est. Max Temp: <span id="max-4"></span> F</p>
+                                <p>Est. Min Temp: <span id="min-4"></span> F</p>
                                 <p>Humidity: <span id="humidity-4"></span>%</p>
                             </div>
                         </div>
@@ -113,8 +113,8 @@
                                     <img class="weather-icon" id="icon-5">
                                     <span id="temp-5"></span> F
                                 </h4>
-                                <p>High: <span id="high-5"></span> F</p>
-                                <p>Low: <span id="low-5"></span> F</p>
+                                <p>Est. Max Temp: <span id="max-5"></span> F</p>
+                                <p>Est. Min Temp: <span id="min-5"></span> F</p>
                                 <p>Humidity: <span id="humidity-5"></span>%</p>
                             </div>
                         </div>
