--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <button type="button" class="btn btn-primary col-3" id="search-btn">Search</button>
                 </div>
                 <div class="card mt-4" id="search-history">
-                    <h3 class="p-3">Search History</h3>
+                    <h3 class="p-3 text-center">Search History</h3>
                 </div>
         </div>
 
@@ -128,4 +128,5 @@
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="assets/script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 </html>
