adding comments to pages, uploading gif, and finishing readme

--- a/index.html
+++ b/index.html
@@ -9,28 +9,31 @@
     <title>Weather Dashboard</title>
 </head>
 <body>
-
+    <!-- making the jumbotron -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-1">Weather Dashboard</h1>
         </div>
     </div>
-
+    <!-- main container for all the bootstrap itens -->
     <div class="row p-3 ">
+        <!-- box for searching for a city -->
         <div class="col-md-5 mt-4">
                 <h2>Search for a city</h2>
                 <div class="input-group" id="search-city">
                     <input id="entered-city" type="text" class="form-input input-group-text col-9" name="city"/>
                     <button type="button" class="btn btn-primary col-3" id="search-btn">Search</button>
                 </div>
+                <!-- side button to search -->
                 <div class="card mt-4" id="search-history">
                     <h3 class="p-3 text-center">Search History</h3>
                 </div>
         </div>
 
         <div class="col-md-7 minimize" id="forecast">
-
+            <!-- right container for weather data -->
             <div class="card bg-color-light mt-4 mt-md-0">
+                <!-- current weather data container -->
                 <div class="container">
                     <div class="row mt-4 mb-4">
                         <h4>
@@ -48,12 +51,12 @@
                     </div>
                 </div>
             </div>
-
+            <!-- five day forecast container -->
             <div class="card mt-4">
                 <h3 class="mt-4 mb-4 p-3">5 Day Forecast</h3>
                 <div class="container p-3">
                     <div class="row row-cols-1 row-cols-md-5">
-                        
+                        <!-- 1st day card -->
                         <div class="col">
                             <div class="card bg-primary text-light p-3 mb-3 mb-md-0">
                                 <p class="badge badge-light mb-1" id="day-1"></p>
@@ -66,7 +69,7 @@
                                 <p>Humidity: <span id="humidity-1"></span>%</p>
                             </div>
                         </div>
-
+                        <!-- 2nd day card -->
                         <div class="col">
                             <div class="card bg-primary text-light p-3 mb-3 mb-md-0">
                                 <p class="badge badge-light mb-1" id="day-2"></p>
@@ -79,7 +82,7 @@
                                 <p>Humidity: <span id="humidity-2"></span>%</p>
                             </div>
                         </div>
-
+                        <!-- 3rd day card -->
                         <div class="col">
                             <div class="card bg-primary text-light p-3 mb-3 mb-md-0">
                                 <p class="badge badge-light mb-1" id="day-3"></p>
@@ -92,7 +95,7 @@
                                 <p>Humidity: <span id="humidity-3"></span>%</p>
                             </div>
                         </div>
-
+                        <!-- 4th day card -->
                         <div class="col">
                             <div class="card bg-primary text-light p-3 mb-3 mb-md-0">
                                 <p class="badge badge-light mb-1" id="day-4"></p>
@@ -105,7 +108,7 @@
                                 <p>Humidity: <span id="humidity-4"></span>%</p>
                             </div>
                         </div>
-
+                        <!-- 5th day card -->
                         <div class="col">
                             <div class="card bg-primary text-light p-3 mb-3 mb-md-0">
                                 <p class="badge badge-light mb-1" id="day-5"></p>
@@ -126,6 +129,7 @@
         </div>
     </div>
 </body>
+<!-- js scripts with moment -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="assets/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
