fixing some bootstrap styling

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <!-- 1st day card -->
                         <div class="col">
                             <div class="card bg-primary text-light p-3 mb-3 mb-md-0">
-                                <p class="badge badge-light mb-1" id="day-1"></p>
+                                <p id="day-1"></p>
                                 <h4>
                                     <img class="weather-icon" id="icon-1">
                                     <span id="temp-1"></span> F
@@ -72,7 +72,7 @@
                         <!-- 2nd day card -->
                         <div class="col">
                             <div class="card bg-primary text-light p-3 mb-3 mb-md-0">
-                                <p class="badge badge-light mb-1" id="day-2"></p>
+                                <p id="day-2"></p>
                                 <h4>
                                     <img class="weather-icon" id="icon-2">
                                     <span id="temp-2"></span> F
@@ -85,7 +85,7 @@
                         <!-- 3rd day card -->
                         <div class="col">
                             <div class="card bg-primary text-light p-3 mb-3 mb-md-0">
-                                <p class="badge badge-light mb-1" id="day-3"></p>
+                                <p id="day-3"></p>
                                 <h4>
                                     <img class="weather-icon" id="icon-3">
                                     <span id="temp-3"></span> F
@@ -98,7 +98,7 @@
                         <!-- 4th day card -->
                         <div class="col">
                             <div class="card bg-primary text-light p-3 mb-3 mb-md-0">
-                                <p class="badge badge-light mb-1" id="day-4"></p>
+                                <p id="day-4"></p>
                                 <h4>
                                     <img class="weather-icon" id="icon-4">
                                     <span id="temp-4"></span> F
@@ -111,7 +111,7 @@
                         <!-- 5th day card -->
                         <div class="col">
                             <div class="card bg-primary text-light p-3 mb-3 mb-md-0">
-                                <p class="badge badge-light mb-1" id="day-5"></p>
+                                <p id="day-5"></p>
                                 <h4>
                                     <img class="weather-icon" id="icon-5">
                                     <span id="temp-5"></span> F
